# opint

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json  package.json
agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
agent/scripts/: bench.py  draw_graph.py  dump_baseline.py
agent/src/agent/: advance.py  checkpointer.py  classifier.py  config.py  db.py  dispatch.py  dispatcher.py  followup.py  graph.py  langsmith_setup.py  llm.py  main.py  prompts.py  sessions.py  state_graph.py  tools.py
agent/tests/: conftest.py  test_advance.py  test_checkpointer.py  test_classifier.py  test_dispatcher.py  test_endpoints.py  test_followup.py  test_graph.py  test_health.py  test_langsmith.py  test_llm.py  test_prompts.py  test_resume.py  test_state_machine.py  test_tools.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  theme.js
client/src/components/: Orb.jsx
client/src/routes/: Admin.jsx  Interview.jsx  Review.jsx  ReviewDetail.jsx
interviews/: sample_interview.json
meta/: PROMPTS.md  behaviour.md  manifest.md
meta/archive/: logs.md
prompts/: PROMPTS.md  behaviour.md  manifest.md  plan.md
prompts/anna/: guardrails.md  mechanics.md  persona.md
server/: package-lock.json  package.json
server/legacy/: README.md  realtime-v1.js  session-v1.js  ssml-v1.js  tools-v1.js
server/src/: config.js  db.js  index.js  logging.js  realtime.js  seed.js
server/src/models/: Interview.js  QuestionSet.js  TranscriptTurn.js
server/src/realtime/: session.js  sttClient.js  (+1 more)
(+6 files in other folders)
